# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.18.3
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Add ./configure --with-remote-file=STR
	- Make ./configure slightly be more verbose
	- code cleanup (nonconst->const/mutable, configure.ac: local macros)
	- Fix linking versionsort http://bugs.gentoo.org/show_bug.cgi?id=288514
	- Let *.tbz2 recognition also work with symlinks (needed for older
	  portage versions): http://bugs.gentoo.org/show_bug.cgi?id=288031

*eix-0.18.2
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- PLEASE NOTICE: The adding of +- data to USE-Flags to the cachefile
	  in eix-0.18.1 came without a version format jump to not force you to
	  regenerate it. Of course, you will only get the new information if
	  you regenerate the cachefile with eix-update/eix-sync. If you use
	  KEEP_VIRTUALS=yes (or configured eix to use cache method eix::...)
	  this information is of course not magically upgraded either.
	  For KEEP_VIRTUALS this means typically that the information is only
	  upgraded after the next (successfull) run of eix-remote.
	- Introduce {slots}, {slotted}.
	- Introduce NEWLINE to avoid printing the magic newline after a
	  package, and even let it default to false (the default formats are
	  now adapted to work with both setting of NEWLINE; but if you use
	  your own formats and do not want to modify these, you will want to
	  set NEWLINE=true in /etc/eixrc to get the previous behavior).
	  The new default NEWLINE=false should make the life simpler for
	  authors of complex format strings who now do not have to care
	  about avoiding to print the final newline: I recommend to use
	  NEWLINE=true only as a temporary workaround until you upgrade your
	  formatstrings. Maybe NEWLINE will be passed out in some future
	  version of eix (when this happens, the behaviour is certainly that
	  of NEWLINE=false).
	- Introduce DATESORT example.
	- NAMESLOT now prints the slot only if there are at least two slots.